--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /highland-cow-farm/_chatgpt_bundle
 highland-cow-farm/make_chatgpt_package_txt.bat
 highland-cow-farm/_chatgpt_bundle_txt.zip
+/highland-cow-farm/tmp
