--- a/highland-cow-farm/package.json
+++ b/highland-cow-farm/package.json
@@ -6,10 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "assets:decode": "tsx tools/b64_to_files.ts",
+    "dev:factory": "vite --open src/dev/factory-test.html"
   },
   "dependencies": {},
   "devDependencies": {
+    "tsx": "file:vendor/tsx",
     "typescript": "^5.4.0",
     "vite": "^5.2.0"
   }
