--- a/highland-cow-farm/tsconfig.json
+++ b/highland-cow-farm/tsconfig.json
@@ -12,5 +12,5 @@
     "lib": ["DOM", "ESNext"],
     "types": []
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts"]
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "tools/**/*.ts"]
 }
